cka_standard/cka_yaml/07_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-node-selector
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent 
  nodeSelector:
    exam-task: cka-demo
