cka_standard/cka_yaml/09_multi_containers_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: react
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  - name: memcached
    image: memcached
    imagePullPolicy: IfNotPresent
