cka_standard/cka_yaml/03_networkpolicy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-from-namespace
  namespace: my-app 
spec:
  podSelector: {} 
  policyTypes:
  - Ingress 
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: echo
    ports:
    - protocol: TCP
      port: 9000
